--- a/thefunny.theme.css
+++ b/thefunny.theme.css
@@ -97,7 +97,7 @@
   --rs-dnd-color: #f04747;
   --rs-offline-color: #636b75;
   --rs-streaming-color: #643da7;
-  --rs-phone-visible: block;
+  --rs-phone-visible: false;
 }
 
 /* Any custom CSS below here */
